<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/basketEmptyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/playfairdisplaybold"
        android:text="@string/basket_title"
        android:textColor="@color/dark_blue"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/empty_basket_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basketEmptyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/intermedium"
        android:text="@string/basket_empty_title"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/size_16" />

    <ImageView
        android:id="@+id/empty_basket_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/basket_empty_button"
        android:layout_below="@+id/empty_basket_title"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/empty_basket_image" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:id="@+id/basket_empty_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_black_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/intersemibold"
            android:letterSpacing="0.1"
            android:text="@string/basket_empty_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16" />
    </RelativeLayout>
</RelativeLayout>
