<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="25dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/homeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/basketLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginEnd="@dimen/size_20"
                android:src="@drawable/tab_bar_rectangular"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/home" />

            <TextView
                android:id="@+id/homeItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/tab_bar_home"
                android:textColor="@color/colorAccent"
                android:textSize="14dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/basketLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profileLayout"
            app:layout_constraintStart_toEndOf="@+id/homeLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginEnd="@dimen/size_20"
                android:src="@drawable/tab_bar_rectangular"
                android:visibility="gone" />

            <ImageView
                android:layout_marginTop="15dp"
                android:id="@+id/basket"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/basket" />

            <RelativeLayout
                android:id="@+id/basketL"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp">

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/size_5">

                    <ImageView
                        android:src="@drawable/basket_badge"
                        android:layout_width="@dimen/size_20"
                        android:layout_height="@dimen/size_20" />

                    <TextView
                        android:id="@+id/basketBadgeAmount"
                        android:fontFamily="@font/intermedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/basketItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/tab_bar_basket"
                android:textColor="@color/basket_quantity"
                android:textSize="14dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/basketLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginEnd="@dimen/size_20"
                android:src="@drawable/tab_bar_rectangular"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/profileItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/tab_bar_profile"
                android:textColor="@color/basket_quantity"
                android:textSize="14dp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>